# bad-apple-pi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  stereo.patch
ba/: CMakeLists.txt  aud_core.c  entry.c  vid_core.c
libbv/: CMakeLists.txt  bvenc.py  bvplay.py
libbv/include/bv/: bv_structs.h  bvdec.h
libbv/src/: bvdec.c
